# pypkcs11

./: .gitignore  MANIFEST.in  Makefile  PyPkcs11.c  PyPkcs11.pyx  PyPkcs11_test.py  README.md  clean.sh  env.sh  ex1_change_pin.preproc.c  passwords.yaml.vault  pyproject.toml  pysetup.py  setup.cfg  setup.py
pypkcs11/: PyPkcs11.pyx  PyPkcs11_test.py
