[metadata]
name = pypkcs11
version = 1.1.1
author = VLEOLML
description = A package mixing Python and Cython sources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com/pypkcs11
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Cython
license = "GNU GPL"
license_files = ["LICEN[CS]E*"]
requires_python = ">=3.11"

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires = pyshamir>=1.0.4

[options.extras_require]
dev = cython
#    pytest

[options.package_data]
pypkcs11 = *.pxd  # if you distribute any .pxd files (optional)
